fix: add ES256 support and blank sub guard to JwtValidator
Design spec requires both RS256 and ES256. Add multi-algorithm key
selector and EC key test. Guard against blank sub claim value.
Use Set.of instead of Arrays.asList wrapper.